client/src/scss/pages/client/game.scss
/* ... */
#ui-kill-leader {
    display: flex;
    position: absolute;
    top: 15px;
    right: 185px;
    margin-left: auto;
    width: max-content;
    background: $transparent_bg;
    border-radius: 8px;
    padding: 8px 12px 8px 12px;
    gap: 10px;
    @media screen and (max-width: $screen_large) {
        top: 7px;
        right: 90px;
        padding: 4px 5px 4px 8px;
        gap: 5px;
        height: 26px;
        border-radius: 4px;
    }

    @media screen and (max-width: $screen_medium) {
        display: none;
    }

    #kill-leader-leader-container {
        font-weight: bold;
        font-size: 25px;
        @include text-shadow;

        .badge-icon {
            width: 25px;
            margin-left: 5px;
            margin-bottom: -4px;
        }

        @media screen and (max-width: $screen_large) {
            font-size: 16px;

            .badge-icon {
                width: 12px;
            }
        }
    }
}

.ui-leaderboard {
    position: absolute;
    top: 10px;
    right: 10px;

    @media screen and (max-width: $screen_large) {
        top: 5px;
        right: 5px;
    }

    .counter {
        margin-left: auto;
        width: fit-content;
        display: flex;
        background: $transparent_bg;
        border-radius: 8px;
        justify-content: center;
        align-items: center;
        padding: 8px 10px 8px 16px;
        gap: 10px;
        @include text-shadow;

        @media screen and (max-width: $screen_large) {
            padding: 4px 5px 4px 8px;
            gap: 5px;
        }

        img {
            filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.6));
            width: 32px;
            height: 32px;

            @media screen and (max-width: $screen_large) {
                width: 16px;
                height: 16px;
            }
        }

        .counter-text {
            padding-left: 5px;
            padding-right: 8px;
            font-weight: bold;
            font-size: 50px;

            @media screen and (max-width: $screen_large) {
                font-size: 25px;
            }
        }
    }

    #kill-feed {
        margin-right: 185px;
        margin-top: -10px;
        @media screen and (max-width: $screen_large) {
            margin-right: 90px;
            margin-top: 0px;
        }
        @media screen and (max-width: $screen_medium) {
            margin-right: 5px;
        }
        @media screen and (max-width: $screen_medium) and (max-height: 500px) {
            margin-top: -40px;
            margin-right: 80px;
        }
        .kill-feed-item {
            max-width: fit-content;
            padding: 8px 10px 8px 10px;
            margin: 5px 0 5px auto;
            background: $transparent_bg;
            border-radius: 4px;
            font-weight: 600;
            position: relative;
            display: flex;
            align-items: center;
            gap: 4px;
            @include text-shadow;

            @media screen and (max-width: $screen_large) {
                font-size: 12px;
                padding: 4px 5px 4px 5px;
                margin: 3px 0 3px auto;
            }

            .fa-solid {
                margin-right: 3px;
            }

            .kill-icon {
                position: relative;
                margin-right: 1px;
                margin-top: -1px;

                @media screen and (max-width: $screen_large) {
                    height: 12px;
                }
            }

            .badge-icon {
                width: 18px;
                margin-top: -1px;
                margin-left: -1px;

                @media screen and (max-width: $screen_large) {
                    height: 12px;
                }
            }

            &.kill-feed-item-victim {
                background-color: #cc000075;
            }

            &.kill-feed-item-killer {
                background-color: #0066cc75;
            }

            &.kill-feed-kill-leader {
                background-color: #dca03590;
            }

            &.no-spaces {
                display: block;

                img {
                    vertical-align: middle;
                }
            }
        }
    }
}

#action-container {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;

    #action-timer {
        position: relative;
        top: -10%;
        text-align: center;
        justify-content: center;
        @include drop-shadow;

        #action-time {
            position: absolute;
            top: calc(30% + 10px);
            left: 50%;
            transform: translate(-50%, -50%);
            z-index: 1;
        }

        svg {
            -webkit-transform: rotate(-90deg);
            transform: rotate(-90deg);
        }
    }

    #action-name {
        background: $transparent_bg;
        @include text-shadow;

        text-align: center;
        align-items: center;
        justify-content: center;

        border-radius: 8px;
        padding: 10px;

        font-size: 20px;
    }
}

#interact-message {
    position: absolute;
    top: 60%;
    left: 50%;
    text-align: center;
    vertical-align: middle;
    transform: translateX(-50%);
    background-color: $transparent_bg;
    padding: 8px;
    border-radius: 5px;
}

#interact-key {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    vertical-align: middle;
    width: 30px;
    height: 30px;
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
        0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    font-size: 25px;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    margin-right: 3px;
    white-space: nowrap;
}

#interact-text {
    font-size: 20px;
    @include text-shadow;
}

#interact-key.active + #interact-text {
    position: relative;
    top: 3px;
}
/* ... */

